deployment-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "9"
  creationTimestamp: "2026-07-28T11:26:18Z"
  generation: 9
  labels:
    app: configmap-demo
  name: configmap-demo
  namespace: exo-first
  resourceVersion: "60723292"
  uid: 299bedf6-e1dc-489f-af15-01cae7a79b91
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: configmap-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-28T22:01:21Z"
      creationTimestamp: null
      labels:
        app: configmap-demo
    spec:
      containers:
      - image: 10.0.1.2:5000/configmap-demo:1.0
        imagePullPolicy: Always
        name: configmap-demo
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2026-07-28T11:26:18Z"
    lastUpdateTime: "2026-07-28T11:26:18Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-07-28T21:53:53Z"
    lastUpdateTime: "2026-07-28T22:01:21Z"
    message: Created new replica set "configmap-demo-6bc99dcc5c"
    reason: NewReplicaSetCreated
    status: "True"
    type: Progressing
  observedGeneration: 9
  unavailableReplicas: 2
