exo-configmap-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: exo-config-test
  name: exo-config-test
  namespace: exo-first
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exo-config-test
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: exo-config-test
    spec:
      containers:
      containers:
      - name: nginx
        image: nginx:1.28
        volumeMounts:
        - name: config-volume
          mountPath: /config
      volumes:
      - name: config-volume
        configMap:
          name: exo-app-properties
