good-secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-secret-pod
  namespace: dac-lab
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    fsGroup: 1000
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: app
    image: busybox:1.36
    command: ["sleep", "3600"]
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
      runAsNonRoot: true
      readOnlyRootFilesystem: true
    volumeMounts:
    - name: db-secret
      mountPath: /secrets
      readOnly: true
  volumes:
  - name: db-secret
    secret:
      secretName: db-credentials
      defaultMode: 0400          # ← clé de sécurité
